--- a/Day-1/Express/package.json
+++ b/Day-1/Express/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ahmed Ghoniem",
   "license": "ISC",
   "dependencies": {
     "config": "^3.3.1",
